fix: zero state not showing in tasks

--- a/src/app/fyle/my-expenses/add-txn-to-report-dialog/add-txn-to-report-dialog.component.scss
+++ b/src/app/fyle/my-expenses/add-txn-to-report-dialog/add-txn-to-report-dialog.component.scss
@@ -60,4 +60,35 @@ $reports_sent_back_color: #da1e28;
   &--state {
     margin-left: auto;
   }
+  &--zero-state {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 80%;
+    color: $blue-black;
+
+    &__img {
+      margin: 12px;
+      max-width: 85%;
+    }
+
+    &__title {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 1.5;
+      padding-bottom: 4px;
+    }
+
+    &__subtitle {
+      font-size: 14px;
+    }
+
+    &__icon {
+      height: 16px;
+      width: 16px;
+      padding: 0 2px;
+      vertical-align: text-bottom;
+    }
+  }
 }
